refactor(mcp-server): extract authentication module and StorageProviderFactory